--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ textarea{
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
-  margin-left: 10px;
+  /* margin-left: 10px; */
   color: white;
 }
 
